--- a/_posts/2018-03-12-homework-1.md
+++ b/_posts/2018-03-12-homework-1.md
@@ -38,7 +38,7 @@ COCOMO模型，Constructive Cost Model， 构造性成本模型，是由巴里·
 ### 自己语言简述 SWEBok 或 CMMI （约200字）
 SWEBok，即Software Engineering Body of Knowledge，软件工程知识体系。该体系全面地描述了软件工程实践所需的知识，最开始的版本包括包括软件需求，软件设计，软件构造，软件测试，软件维护，软件配置管理，软件工程管理，软件工程过程，软件工程工具和方法，软件质量，而最新的版本还新增了4个基础知识域（软件工程经济学、计算基础、数学基础和工程基础）和一个软件工程职业实践知识域。通过确立这个知识体系，可以促进世界范围内对软件工程的一致观点，从而为开发本科软件工程教育计划，培养更多软件工程人才打下基础。
 
-## 解释 PSP 各项指标及技能要求：
+## 2.解释 PSP 各项指标及技能要求：
 
 ### 按表格 PSP 2.1， 了解一个软件工程师在接到一个任务之后要做什么，需要哪些技能，解释你打算如何统计每项数据？
 一个软件工程师在接到一个任务之后要进行计划，继而进行需求分析，生成设计文档，进行设计复审，制定代码规范，进行具体设计和具体编码，代码复审和测试，最后完成测试报告，计算工作量，进行事后总结并提出过程改进计划。这需要编码的技能，例如对编程语言与开发平台的掌握，还有好的软件设计思想,以及自我管理的能力，表达和交流的能力，与人合作的能力，把任务按质按量完成的执行力等。
