--- a/_posts/2018-04-15-homework-4.md
+++ b/_posts/2018-04-15-homework-4.md
@@ -20,7 +20,7 @@ tags: 博客
 Airbnb的订旅馆系统提供按条件筛选，例如选择适合家庭出游或者适合商务差旅，更为人性化。
 项目早期，发现创新的思路与方法是：可以先体验下自己项目做出来的原型，然后问自己项目可能缺了什么，自己想要什么，便有助于发现创新的思路与方法。
 
-### d.请使用 SCRUM 方法，在（任务b）用例图基础上，编制某定旅馆开发的需求 （backlog）
+### d.请使用 SCRUM 方法，在（任务b）用例图基础上，编制某定旅馆开发的需求 （backlog）1
 | ID | Name | Imp | Est | How to demo |
 | --- | --- | --- | --- | --- |
 | 0 | 搜索旅馆 | 10 | 16 | 通过输入相关信息搜索符合要求的旅馆 |  
