--- a/_posts/2018-06-03-homework-8.md
+++ b/_posts/2018-06-03-homework-8.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: 系统分析与设计-作业7
+title: 系统分析与设计-作业8
 date: 2018-06-03 19:00:00+00:00
 categories: 日志
 tags: 博客
@@ -29,6 +29,6 @@ tags: 博客
 异：
 1.Flux没有分同步异步，Vuex把action细分为action和mutation，分别对应异步场景和同步场景；
 2.Vuex只有一个Store，Flux有个Dispatcher；
-3.Flux数据流的顺序是：view——>action——>dispatcher——>store返回——>dispatcher——>view，而Vuex数据流的顺序是：vueComponent——>(dispatch)Action——>(commit)Mutations——>(mutate)State——>(render)VueComponent。
+3.Flux数据流的顺序是：view->action->dispatcher->store返回—>dispatcher—>view，而Vuex数据流的顺序是：vueComponent—>(dispatch)Action—>(commit)Mutations—>(mutate)State—>(render)VueComponent。
 同：
 都提供数据驱动的、可组合搭建的视图组件。
